# vimlogo

./: .pre-commit-config.yaml  .vimrc  .vimspector.json  LICENSE  README.md  dev-requirements.txt  pyproject.toml  requirements.txt  tox.ini
src/vim_logo/: __init__.py  diamond.py  glyphs.py  illumination.py  letter_v.py  letters_im.py  main.py  params_diamond.py  paths.py  poly_union.py  reference_m.py  reference_paths.py  shared.py  vec3.py
src/vimlogo/: diamond.py  glyphs.py  illumination.py  letter_v.py  letters_im.py  main.py  params_diamond.py  paths.py  reference_paths.py  shared.py
tests/: conftest.py  test_glyph.py  test_reference.py
